--- a/Pendaftaran_Tenant/Views/Penyewa/CreateKaryawan2.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateKaryawan2.cshtml
@@ -11,7 +11,7 @@
 }
 
 <div class="row">
-    @Html.ActionLink("Lanjut ke penambahan produk >>", "CreateProduk", "Penyewa", null, new { onclick = "return confirm('Anda yakin sudah selesai mengisi data karyawan dan hendak melanjutkan ke pengisian produk?')", @class = "btn btn-success btn-sm", @style = "float:right;margin-right:40px" })
+    @Html.ActionLink("Lanjut ke penambahan produk >>", "CreateProduk2", "Penyewa", null, new { onclick = "return confirm('Anda yakin sudah selesai mengisi data karyawan dan hendak melanjutkan ke pengisian produk?')", @class = "btn btn-success btn-sm", @style = "float:right;margin-right:40px" })
 </div>
 <br />
 
