--- a/Pendaftaran_Tenant/Views/Penyewa/CreateUI.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateUI.cshtml
@@ -33,10 +33,8 @@
         <li class="active"><a>Design Website</a></li>
         <li><a style="color:#47a447">Gambar Homepage</a></li>
         <li><a style="color:#47a447">Data Karyawan</a></li>
-        <li><a style="color:#47a447">Data Produk</a></li>
-        <li><a style="color:#47a447">Data Bahan</a></li>
-        <li><a style="color:#47a447">Data Jenis Sablon</a></li>
-        <li><a style="color:#47a447">Data Harga</a></li>
+        <li><a style="color:#47a447">Data Produk, bahan, sablon dan harga</a></li>
+        <li><a style="color:#47a447">Ulasan Produk</a></li>
 
     </ul>
 </div>
