--- a/Pendaftaran_Tenant/Views/Penyewa/CreateKaryawan.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateKaryawan.cshtml
@@ -14,10 +14,9 @@
         <li><a style="color:#47a447">Design Website</a></li>
         <li><a style="color:#47a447">Gambar Homepage</a></li>
         <li class="active"><a>Data Karyawan</a></li>
-        <li><a style="color:#47a447">Data Produk</a></li>
-        <li><a style="color:#47a447">Data Bahan</a></li>
-        <li><a style="color:#47a447">Data Jenis Sablon</a></li>
-        <li><a style="color:#47a447">Data Harga</a></li>
+        <li><a style="color:#47a447">Data Produk, bahan, sablon dan harga</a></li>
+        <li><a style="color:#47a447">Ulasan Produk</a></li>
+
 
     </ul>
 </div>
