--- a/Pendaftaran_Tenant/Views/Penyewa/IndexProduk.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexProduk.cshtml
@@ -12,7 +12,7 @@
    
 <div class="row">
 
-    @Html.Partial("CreateProduk2")
+    @*@Html.Partial("CreateProduk2")*@
 
     <div class="col-md-6 col-xs-6">
         <div class="thumbnail clearfix text-center" style="max-width:600px;width:100%;margin-right:10%">
