--- a/Pendaftaran_Tenant/Views/Penyewa/IndexViewHarga.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexViewHarga.cshtml
@@ -10,101 +10,114 @@
 
 }
 <br />
-<div class="text-center">
-    <ul class="nav nav-wizard" style="display:inline-block">
-        <li><a style="color:#47a447">Design Website</a></li>
-        <li><a style="color:#47a447">Gambar Homepage</a></li>
-        <li><a style="color:#47a447">Data Karyawan</a></li>
-        <li><a style="color:#47a447">Data Produk</a></li>
-        <li><a style="color:#47a447">Data Bahan</a></li>
-        <li><a style="color:#47a447">Data Jenis Sablon</a></li>
-        <li class="active"><a>Data Harga</a></li>
+@*<div class="text-center">
+        <ul class="nav nav-wizard" style="display:inline-block">
+            <li><a style="color:#47a447">Design Website</a></li>
+            <li><a style="color:#47a447">Gambar Homepage</a></li>
+            <li><a style="color:#47a447">Data Karyawan</a></li>
+            <li><a style="color:#47a447">Data Produk</a></li>
+            <li><a style="color:#47a447">Data Bahan</a></li>
+            <li><a style="color:#47a447">Data Jenis Sablon</a></li>
+            <li class="active"><a>Data Harga</a></li>
 
-    </ul>
-</div>
-<br />
-
-<br />
-<h2 class="text-center" style="color:#47a447">D A F T A R &nbsp;&nbsp; H A R G A</h2>
-<hr />
-@Html.Raw(TempData["Pesan"])
-
-<table class="table">
-    <tr>
-        <th>
-           Nama Produk
-        </th>
-        <th>
-            Nama Bahan
-        </th>
-        <th>
-           Nama Sablon
-        </th>
-
-        <th style="text-align:center">
-            Harga
-        </th>
-
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model.Select((value, i) => new { i, value }))
-    {
-        <tr>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.value.nama_produk)
-            </td>
-            @if (item.value.nama_bahan == null)
-            {
-                <td>-</td>
-            }
-            else
-            {
-                <td>
-                    @Html.DisplayFor(modelItem => item.value.nama_bahan)
-                </td>
-            }
-            @if (item.value.nama_sablon == null)
-            {
-                <td>-</td>
-            }
-            else
-            {
-                <td>
-                    @Html.DisplayFor(modelItem => item.value.nama_sablon)
-                </td>
-            }
-
-
-            @if (item.value.harga == 0)
-            {
-                <td align="center">
-                    <input type="text" class="form-control" id="harga_@item.i.ToString()" name="harga" style="width:6em" />
-                </td>
-                <td align="center">
-                    <button class="btn btn-success" onclick="location.href='@Url.Action("AddHarga","Penyewa")?idbahan=' + '@item.value.id_bahan' + '&idproduk=' + '@item.value.id_produk' + '&idsablon=' + '@item.value.id_jns_sablon' + '&harga=' + $('#harga_@item.i.ToString()').val()">Tambah Harga</button>
-                </td>
-            }
-            else
-            {
-                <td align="center">
-                    @Html.DisplayFor(modelItem => item.value.harga)
-                </td>
-
-                <td align="center">
-                    <span class="glyphicon glyphicon-signal glyphicon-check" style="color:lawngreen"></span>
-                </td>
-            }
-
-
-        </tr>
-    }
-
-</table>
-<div class="row">
-    <div class="col-md-12 col-xs-12 text-center">
-        @Html.ActionLink("Selesai", "Selesai", "Penyewa", new { @class = "btn btn-success btn-sm"})
-
+        </ul>
     </div>
+    <br />
+
+    <br />*@
+@Html.Partial("CreateProduk2")
+<div class="row" id="listdata">
+    <h2 class="text-center" style="color:#47a447">D A F T A R &nbsp;&nbsp; P R O D U K</h2>
+    <hr />
+    @*@Html.Raw(TempData["Pesan"])*@
+
+    <table class="table">
+        <tr>
+            <th>
+                Nama Produk
+            </th>
+            <th>
+                Nama Bahan
+            </th>
+            <th>
+                Nama Sablon
+            </th>
+
+            <th style="text-align:center">
+                Harga
+            </th>
+
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model.Select((value, i) => new { i, value }))
+        {
+            <tr>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.value.nama_produk)
+                </td>
+                @if (item.value.nama_bahan == null)
+                {
+                    <td>-</td>
+                }
+                else
+                {
+                    <td>
+                        @Html.DisplayFor(modelItem => item.value.nama_bahan)
+                    </td>
+                }
+                @if (item.value.nama_sablon == null)
+                {
+                    <td>-</td>
+                }
+                else
+                {
+                    <td>
+                        @Html.DisplayFor(modelItem => item.value.nama_sablon)
+                    </td>
+                }
+
+
+                @if (item.value.harga == 0)
+                {
+                    <td align="center">
+                        <input type="text" class="form-control" id="harga_@item.i.ToString()" name="harga" style="width:6em" />
+                    </td>
+                    <td align="center">
+                        <button class="btn btn-success" onclick="location.href='@Url.Action("AddHarga","Penyewa")?idbahan=' + '@item.value.id_bahan' + '&idproduk=' + '@item.value.id_produk' + '&idsablon=' + '@item.value.id_jns_sablon' + '&harga=' + $('#harga_@item.i.ToString()').val()">Tambah Harga</button>
+                    </td>
+                }
+                else
+                {
+                    <td align="center">
+                        @Html.DisplayFor(modelItem => item.value.harga)
+                    </td>
+
+                    <td align="center">
+                        <span class="glyphicon glyphicon-signal glyphicon-check" style="color:lawngreen"></span>
+                    </td>
+                }
+
+
+            </tr>
+        }
+
+    </table>
 </div>
+@*<div class="row">
+        <div class="col-md-12 col-xs-12 text-center">
+            @Html.ActionLink("Selesai", "Selesai", "Penyewa", new { @class = "btn btn-success btn-sm"})
+
+        </div>
+    </div>*@
+<script>
+    $(document).ready(function () {
+
+
+        var x = document.getElementById("scrolldown");
+        if (x.style.display === "none") {
+            x.style.display = "block";
+        }
+    }
+</script>
