--- a/Pendaftaran_Tenant/Views/Penyewa/EditBahan.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/EditBahan.cshtml
@@ -28,6 +28,7 @@
                 </tr>
             </table>
             <br />
+            <button class="btn btn-warning" onclick="location.href='javascript:history.go(-1)'">Batal</button>
                 <input type="submit" value="Save" class="btn btn-success" />
             <br />
             <br />
