--- a/Pendaftaran_Tenant/Views/Penyewa/IndexBahanEdit.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexBahanEdit.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <a onclick="location.href='@Url.Action("IndexProdukBig", "Penyewa")'" class="btn btn-warning btn-sm" style="margin-left:35px"><< Kembali ke daftar produk</a>
-    <a onclick="location.href='@Url.Action("CreateBahan", "Penyewa")'" class="btn btn-warning btn-sm" style="margin-right:35px;float:right">Tambah Bahan >></a>
+    <a onclick="location.href='@Url.Action("CreateBahan", "Penyewa")'" class="btn btn-success btn-sm" style="margin-right:35px;float:right"><span class="glyphicon glyphicon-plus"></span>&nbsp;Tambah Bahan</a>
 </div>
 <br />
 <div class="col-md-12 col-xs-12">
