--- a/Pendaftaran_Tenant/Views/Penyewa/IndexProdukBig.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexProdukBig.cshtml
@@ -12,7 +12,7 @@
 
 }
 <br />
-@if (Session["sesi"].ToString() == "bahan")
+@*@if (Session["sesi"].ToString() == "bahan")
 {
     <div class="text-center">
         <ul class="nav nav-wizard" style="display:inline-block">
@@ -41,7 +41,7 @@ else if (Session["sesi"].ToString() == "sablon")
 
         </ul>
     </div>
-}
+}*@
 <h2 class="text-center" style="color:#47a447">D A F T A R     &nbsp;&nbsp; P R O D U K</h2>
 <hr />
 @*@if (Session["sesi"].ToString() == "bahan")
@@ -55,7 +55,7 @@ else if (Session["sesi"].ToString() == "sablon")
 @*else if (Session["sesi"].ToString() == "sablon")*@
 @*{
     <div class="row">*@
-        @Html.ActionLink("Lanjut ke penambahan harga >>", "CreateViewHarga", "Penyewa", null, new { onclick = "return confirm('Anda yakin sudah selesai mengisi produk, bahan, serta jenis sablon dan hendak melanjutkan ke pengisian harga?')", @class = "btn btn-success btn-sm", @style = "float:right;margin-right:40px" })
+        @*@Html.ActionLink("Lanjut ke penambahan harga >>", "CreateViewHarga", "Penyewa", null, new { onclick = "return confirm('Anda yakin sudah selesai mengisi produk, bahan, serta jenis sablon dan hendak melanjutkan ke pengisian harga?')", @class = "btn btn-success btn-sm", @style = "float:right;margin-right:40px" })*@
         @*@Html.ActionLink("Lanjut ke penambahan harga >>", "IndexProdukBig", "Penyewa", new { sesi = "sablon" }, new { onclick = "return confirm('Anda yakin sudah selesai mengisi bahan dan hendak melanjutkan ke pengisian jenis sablon?')", @class = "btn btn-success btn-sm", @style = "float:right;margin-right:40px" })*@
 
     @*</div>*@
@@ -76,25 +76,21 @@ else if (Session["sesi"].ToString() == "sablon")
                 </tr>
             </table>
             <hr />
-            @if (Session["sesi"].ToString() == "bahan")
-            {
-                <p>
+           
+                @*<p>
                     <input type="button" value="Tambah Bahan" onclick="location.href='@Url.Action("IndexBahan", "Penyewa")?id=' + @item.id_produk" class="btn btn-primary btn-sm" />
 
 
                 </p>
-            }
-            else if (Session["sesi"].ToString() == "sablon")
-            {
+            
+            
                 <p>
                     <input type="button" value="Tambah Jenis Sablon" onclick="location.href='@Url.Action("IndexJenisSablon", "Penyewa")?id=' + @item.id_produk" class="btn btn-primary btn-sm" />
 
 
-                </p>
+                </p>*@
 
-            }
-            else
-            {
+            
                 <p>
                     <input type="button" value="Ubah" onclick="location.href='@Url.Action("EditProduk", "Penyewa")?id=' + @item.id_produk" class="btn btn-primary btn-sm" />
                     <input type="button" value="Hapus" onclick="location.href='@Url.Action("DeleteProduk", "Penyewa")?id=' + @item.id_produk" class="btn btn-danger btn-sm" />
@@ -104,7 +100,7 @@ else if (Session["sesi"].ToString() == "sablon")
                     <input type="button" value="Lihat Jenis Sablon" onclick="location.href='@Url.Action("IndexJenisSablonBig", "Penyewa")?id=' + @item.id_produk" class="btn btn-warning btn-sm" />
 
                 </p>
-            }
+            <hr />
 
 
         </div>
