--- a/Pendaftaran_Tenant/Views/Home/Index2.cshtml
+++ b/Pendaftaran_Tenant/Views/Home/Index2.cshtml
@@ -13,8 +13,8 @@
             <div class="thumbnail clearfix text-center">
                 <span class="glyphicon glyphicon-book" style="font-size:50px"></span>
                 <p style="font-size:15px">Lihat produk, bahan, dan jenis sablon yang sudah terdaftar</p>
-                @*<p><a onclick="location.href='@Url.Action("IndexProdukBig", "Penyewa")'" class="btn btn-success btn-lg">Lihat Produk</a></p>*@
-                <p>@Html.ActionLink("Lihat Produk", "IndexProdukBig", "Penyewa", new { sesi = "lihat" }, new { @class = "btn btn-success btn-lg"})</p>
+                <p><a onclick="location.href='@Url.Action("IndexProdukBig", "Penyewa")'" class="btn btn-success btn-lg">Lihat Produk</a></p>
+                @*<p>@Html.ActionLin*@@*k("Lihat Produk", "IndexProdukBig", "Penyewa", new { @class = "btn btn-success btn-lg"})</p>*@
             </div>
         </div>
         <div class="col-md-4 col-xs-4">
