--- a/Pendaftaran_Tenant/Views/Penyewa/IndexJenisSablonBig.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexJenisSablonBig.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <a onclick="location.href='@Url.Action("IndexProdukBig", "Penyewa")'" class="btn btn-warning btn-sm" style="margin-left:35px"><< Kembali ke daftar produk</a>
-    <a onclick="location.href='@Url.Action("CreateJenisSablon", "Penyewa")'" class="btn btn-warning btn-sm" style="margin-right:35px;float:right">Tambah Jenis Sablon >></a>
+    <a onclick="location.href='@Url.Action("CreateJenisSablon", "Penyewa")'" class="btn btn-success btn-sm" style="margin-right:35px;float:right"><span class="glyphicon glyphicon-plus"></span>&nbsp;Tambah Jenis Sablon >></a>
 </div>
 <br />
 <div class="col-md-12 col-xs-12">
