--- a/Pendaftaran_Tenant/Views/Penyewa/Selesai.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/Selesai.cshtml
@@ -10,7 +10,7 @@
         <h2 style="color:#47a447">Pendaftaran Selesai</h2>
         <hr />
         <p>Anda telah menyelesaikan pendaftaran data website.</p>
-        <p>Data yang telah diisi dapat dilihat kembali melalui halaman beranda.</p>
+        <p>Data yang telah diisi dapat <b>dilihat kembali dan diubah</b> melalui halaman beranda.</p>
         <br />
         <p>Harap segera menginfokan pemilik aplikasi bila data sudah selesai diisi.</p>
         <p><b>Terimakasih</b></p>
